--- a/07-inference-for-numerical-responses/04-lesson/07-04-lesson.Rmd
+++ b/07-inference-for-numerical-responses/04-lesson/07-04-lesson.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Lesson 4 - Comparing many means"
+title: "Lesson 4 - Comparing many means with ANOVA"
 output: 
   learnr::tutorial:
     progressive: true
@@ -17,6 +17,7 @@ library(broom)
 library(emo)
 library(openintro)
 library(magrittr)
+library(ggridges)
 
 # knitr options ----------------------------------------------------------------
 
@@ -38,6 +39,9 @@ gss <- read_csv("data/gss_wordsum_class.csv")
 
 So far in this tutorial, we discussed inference on a single mean as well as inference for comparing two means. Next we move on to comparing many means simultaneously.
 
+Our motivating data comes from the General Social Survey. The two variables of interest are vocabulary score and self-identified social class.
+
+Vocabulary score is calculated based on a ten question vocabulary test, where a higher score means better vocabulary, and self-identified social class has 4 levels: lower, working, middle, and upper class.
 
 > - `wordsum`: 10 question vocabulary test (scores range from 0 to 10)
 > - `class`: self-identified social class (lower, working, middle, upper)
@@ -52,12 +56,6 @@ So far in this tutorial, we discussed inference on a single mean as well as infe
 |6  |         6|WORKING |
 |...|       ...|...     |
 |795|         9|MIDDLE  |
-
-
-Our motivating data comes from the General Social Survey. The two variables of interest are vocabulary score and self-identified social class.
-
-Vocabulary score is calculated based on a ten question vocabulary test, where a higher score means better vocabulary, and self-identified social class has 4 levels: lower, working, middle, and upper class.
-
 
 ### Vocabulary score: `wordsum`
 
@@ -203,7 +201,7 @@ We're going to start our discussion with reviewing the hypotheses for an ANOVA. 
 > $H_0$: The average vocabulary score is the same across all social classes;  
 > $\mu_{lower} = \mu_{working} = \mu_{middle} = \mu_{upper}$.
 > 
-> $H_A$: The average vocabulary score for at least one social class differs from the others. 
+> $H_A$: The average vocabulary score for __*at least one*__ social class differs from the others. 
 
 
 Let's quickly remind ourselves of the data we're working with from the General Social Survey on vocabulary scores, a numerical variable, and social class, a categorical variable with four levels.
@@ -212,16 +210,6 @@ Our null hypothesis is that the average vocabulary score is the same across all 
 
 
 ### Variability partitioning
-
-
-> Total variability in vocabulary score:
-> 
-> - Variability that can be attributed to differences in social class - **between group** variability 
-> 
-> - Variability attributed to factors within a group - **within group** variability 
-> 
-
-
 
 Let's outline this idea of variability partitioning:
 
@@ -235,9 +223,16 @@ We partition the variability into two sets:
 
 Variability attributed to differences within each social group is called "within group" variability. This variability is not what we are interested in and is somewhat of a nuisance factor. If everyone within a certain social class had the same vocabulary score, then we would have no within group variability and we would be able to more easily compare the vocabulary scores across groups. However, this is almost never the case, and we need to account for the variability within the groups we are interested in. 
 
-### ANOVA output
+> Total variability in vocabulary score:
+> 
+> - Variability that can be attributed to differences in social class - **between group** variability 
+> 
+> - Variability attributed to factors within a group - **within group** variability 
+> 
 
-Here is a look at what the output of an ANOVA model looks like. The first row is about the between group variability, and the second row is about the within group variability. We often refer to the first row as the "group" row, and the second row as the "error" row. Next we'll go through some of the values on the ANOVA table and describe what they mean.
+## Parametric ANOVA
+
+Here is a look at what the parametric (theoretical) output of an ANOVA model looks like. The first row is about the between group variability, and the second row is about the within group variability. We often refer to the first row as the "group" row, and the second row as the "error" row. Next we'll go through some of the values on the ANOVA table and describe what they mean.
 
 
 ```{r echo=TRUE}
@@ -268,9 +263,9 @@ In this case, 7.6% of the variability in vocabulary scores is explained by self-
 
 ANOVA uses a test statistic $F$, which represents a standardized ratio of variability in the sample means relative to the variability within the groups. If $H_0$ is true and the model conditions are not violated, the statistic ($F$) follows an $F$-distribution with parameters $df_1 = groups -1$ and $df_2 = n - groups$. 
 
-In the plot below, you see that the $F$-distribution is right skewed! There are no negative values on the $F$-distribution! Thus, for every hypothesis test, the upper tail of the $F$-distribution is used to calculate the p-value.
+In the plot below, you see that the $F$-distribution is right skewed! There are no negative values on the $F$-distribution! Thus, for every hypothesis test, **only** the upper tail of the $F$-distribution is used to calculate the p-value.
 
-Similar to the $t$- distribution, the $F$-distribution is defined by degrees of freedom. Except, now there are two different degrees of freedom, the degrees of freedom of the groups and the degrees of freedom of the residuals. 
+Similar to the $t$-distribution, the $F$-distribution is defined by degrees of freedom. Except, now there are two different degrees of freedom, the degrees of freedom of the groups and the degrees of freedom of the residuals. 
 
 These degrees of freedom are called the "numerator" and "denominator" degrees of freedom, since they correspond to the mean squares used in the calculation of the $F$-statistic. The "numerator" degrees of freedom is the number of groups you have minus 1 (here: 4 - 1). The "denominator" degrees of freedom is the total number of observations minus the number of groups (here: 795 - 4). 
 
@@ -338,7 +333,9 @@ ggplot(aes(x = .)) +
 
 Time to put this into practice.
 
-### ANOVA for evaluation score vs. rank of professor
+## Your turn! 
+
+__ANOVA for evaluation score vs. rank of professor__
 
 Let's conduct the ANOVA for evaluating whether there is a difference in the average evaluation score between the different ranks of professors at the University of Texas at Austin.
 
@@ -378,7 +375,7 @@ Interpret the result in context of the data and the research question. If needed
 Would your conclusion change if you had used a 10% significance level?
 
 
-### Conditions for ANOVA
+## Conditions for ANOVA
 
 Just like any other statistical inference method we've encounter so far, there are mathematical conditions that need to be met for an ANOVA as well. Since we cannot mathematically "prove" that these conditions have been "met," we will use a careful eye to evaluate the degree to which each condition may be violated. 
 
@@ -477,31 +474,110 @@ So, what do you think? Is the equal variance condition violated?
 
 Let's see what these standard deviations *look* like. 
 
-Create side-by-side violin plots of the distribution of `wordsum` across the different self-identified social `class`es. Color the violins based on the `class`.  
+Create ridge plots of the distribution of `wordsum` across the different self-identified social `class`es.  
 
 ```{r vocabulary_4, exercise=TRUE}
 gss %>%
-  # Map wordsum to the y-axis and class to the x-axis
+  # Map wordsum to the x-axis and class to the y-axis
   ggplot(aes(x = ___, y = ___)) +
-  # Add violins to the plot and color by class
-  geom_violin(aes(fill = ___))
+  # Add density ridges to the plot! 
+  geom_density_ridges()
 ```
 
 <div id="vocabulary_4-hint">
 **Hint:** 
-- Call `ggplot()`, passing `wordsum` to the `y` variable and `class` to the `x` variable. 
-- Change the colors of the violins by specifying `class` as the `color` variable. 
+- Call `ggplot()`, passing `wordsum` to the `x` variable and `class` to the `y` variable. 
 </div>
 
 ```{r vocabulary_4-solution}
 gss %>%
-  # Map wordsum to the y-axis and class to the x-axis
-  ggplot(aes(x = class, y = wordsum)) +
-  # Add violins to the plot and color by class
-  geom_violin(aes(fill = class))
+  # Map wordsum to the x-axis and class to the y-axis
+  ggplot(aes(x = wordsum, y = class)) +
+  # Add density ridges to the plot! 
+  geom_density_ridges()
 ```
 
 So, what do you think now? Is the equal variance condition violated? 
+
+## Simulation-based ANOVA
+
+If the condition of normality is violated, then the $F$-distribution is a poor approximation for what the true sampling distribution of the F-statistics looks like. Instead, we should use a more robust method. The familiar randomization and bootstrapping methods from before can be extended into the ANOVA framework. We really only need to make one modification:
+
+> When we shuffle our observations together and make new groups, now we will have more than two groups to divide the observations into. 
+All of the other steps for creating the null distribution are the same! Let's see how this is done. 
+
+### Calculating the observed statistic
+
+In the case of an ANOVA, the statistic we are interested in is the F-statistic. While we can plot this statistic on an $F$-distribution, is really is just another statistic that we can calculate (like the mean or median). We like this statistic because it allows for us to summarize how different multiple means are from each other, relative to how variable the observations are within each group. 
+
+We can `calculate` the F-statistic using the tools from the infer package we are familiar with. The only part that is new is the `stat` that we calculate. Here, we use the `"F"` statistic. This is what this looks like: 
+
+```{r, echo = TRUE}
+obs_stat <- gss %>% 
+  specify(wordsum ~ class) %>% 
+  calculate(stat = "F")
+```
+
+The observed statistic for these data is an F-statistic equal to `r pull(obs_stat)`. Let's see how extreme this is, if there really is no difference in the `wordsum` between the four groups. 
+
+### Simulating samples under the null hypothesis
+
+The next step is to simulate what we would expect for `wordsum`s to look like, if the null hypothesis was true. This is similar to the method for a difference in means, except now we have four groups: lower, middle, upper, and working. The underlying process, however, looks the same:
+
+- Step 1: Write the values of `wordsum` on 795 index cards (one card per person).
+- Step 2: Shuffle the cards and randomly split them into four new piles, of the same size as the original groups.
+- Step 3: Calculate and record the test statistic: F-statistic
+- Step 4: Repeat steps (1) and (2) many times to generate the sampling distribution of the difference in means under the null hypothesis.
+- Step 5: Calculate p-value as the percentage of simulations where the test statistic is at least as extreme as the observed F-statistic
+
+###
+
+Let's start with steps 1-4. Using the code below, fill in the missing pieces necessary to simulate F-statistics that could have happened if the null hypothesis was true. 
+
+Once you've filled in the code, take a look at what the F-statistics stored inside of `null_dist` look like!
+
+```{r anova-sim, exercise = TRUE}
+null_dist <- gss %>% 
+  specify(___ ~ ___) %>% 
+  hypothesize(null = "___") %>% 
+  generate(reps = 1000, type = "permute") %>% 
+  calculate(stat = "___")
+
+```
+
+```{r anova-sim-hint-1}
+specify(wordsum ~ class) 
+```
+
+```{r anova-sim-hint-2}
+hypothesise(null = "independence")
+```
+
+```{r anova-sim-hint-3}
+calculate(stat = "F")
+```
+
+###
+
+Now that we have our observed F-statistic and our null distribution, we can calculate our p-value! Let's visualize where the observed statistic lies on the null distribution first. 
+
+```{r, include = FALSE}
+null_dist <- gss %>% 
+  specify(wordsum ~ class) %>% 
+  hypothesize(null = "independence") %>% 
+  generate(reps = 1000, type = "permute") %>% 
+  calculate(stat = "F")
+```
+
+```{r, echo = TRUE}
+null_dist %>% 
+  visualise() +
+  shade_p_value(obs_stat = obs_stat, direction = "greater")
+```
+
+Woah! That's a long ways away from the null distribution! As you would suspect, there are no permuted samples with F-statistics as or more extreme that what we observed in the dataset. Thus, our p-value is approximately 0. 
+
+Similar to before, with this p-value we can conclude that *at least one* of the classes has a different mean `wordsum`. But, you might wonder, which of the classes are different? That's where post-hoc testing picks up! 
 
 
 ## Post-hoc testing
@@ -587,7 +663,7 @@ For this exercise, you are to conduct a pairwise t-test on vocabulary scores and
 - Use the `pairwise.t.test()` function to obtain the pairwise $t$-tests. 
 - Set the `p.adjust.method` to `"Bonferroni"` to obtain the Bonferroni corrected p-values.
 - Tidy the resulting table. 
-- Compare the adjusted p-values to the un-adjusted p-values.
+- Compare the adjusted p-values to the un-adjusted p-values. Which p-values are smaller? 
 
 
 ```{r vocabulary_5, exercise=TRUE}
@@ -617,7 +693,6 @@ t_test_results <- gss %$%
 
 ## Alternative method 
 t_test_results <- pairwise.t.test(gss$wordsum, gss$class, p.adjust.method = "bonferroni")
-
 
 # Tidy the result
 tidy(___)
