change the name of the resulting data frame to "evals"
The name for the resulting data frame is mentioned with 'evals' in the text before the exercise.

Actually it would maybe better to use the name 'evals_fortified' as it leaves the original data set unchanged.

But in that case you would need to change (a) the last two exercises (especially the last one where you are using the new variable 'cls_type') and
(b) to change the name of the resulting data frame in your setup chunk.

--- a/01-getting-started-with-data/04-lesson/01-04-lesson.Rmd
+++ b/01-getting-started-with-data/04-lesson/01-04-lesson.Rmd
@@ -157,7 +157,7 @@ The `cls_students` variable in `evals` tells you the number of students in the c
 
 ```{r type-of-variable, exercise=TRUE}
 # Recode cls_students as cls_type
-evals_fortified <- evals %>%
+evals <- evals %>%
   mutate(
     ___ = case_when(
       ___ ~ "small",
@@ -169,7 +169,7 @@ evals_fortified <- evals %>%
 
 ```{r type-of-variable-solution}
 # Recode cls_students as cls_type
-evals_fortified <- evals %>%
+evals <- evals %>%
   mutate(
     cls_type = case_when(
       cls_students <= 18                      ~ "small",
